// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormErrorAlert > エラーメッセージがある場合に正しくレンダリングされる（スナップショット） 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90 mb-4"
    data-slot="alert"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      入力内容を確認してください。
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      <ul
        class="list-inside list-disc text-sm"
      >
        <li>
          エラー1
        </li>
        <li>
          エラー2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FormErrorAlert > エラーメッセージがない場合に正しくレンダリングされる（スナップショット） 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90 mb-4"
    data-slot="alert"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      入力内容を確認してください。
    </div>
  </div>
</div>
`;
